--- a/HelloFunction.html
+++ b/HelloFunction.html
@@ -5,7 +5,7 @@
 <title>Hello</title>
     <script>
             let yesnoaccept = ["Да", "да", "Нет", "нет", "Yes", "yes", "No", "no"];
-            //Данный массив можно менять как угодно
+            //переменная ниже - массив с именами, который можно свободно менять, это просто рандомные имена пользователей
             let names = ["Morgot", "Aspect", "Kraken", "Bender", "Lynch", "Big Papa", "Mad Dog", "Bowser", "O’Doyle", "Bruise", "Psycho", "Cannon", "Ranger", "Clink", "Ratchet", "Cobra", "Reaper", "Colt", "Rigs", "Crank", "Ripley", "Creep", "Roadkill", "Daemon", "Ronin"];
             let username;
             let yesNo;
@@ -47,7 +47,7 @@
                         }
                     }
             }
-        helloUser(theName)
+        helloUser(theName);
     </script>
 </head>
 <body>
